--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
-  },
-  "engines": {
-    "node": "13.11.0",
-    "npm": "6.13.7"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -56,5 +52,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  "engines": {
+    "node": "13.11.0",
+    "npm": "6.13.7"
   }
 }
