--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "bootstrap": "^4.4.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "express":"*",
+    "body-parser":"*"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.4",
