Remove cloudinary das dependencias

--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "body-parser": "*",
     "bootstrap": "^4.4.1",
+    "express": "*",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "express": "*",
-    "body-parser": "*"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.4",
