--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "*",
     "bootstrap": "^4.4.1",
     "express": "*",
+    "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
